deploy/argocd/manifests/todo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
